Buildweek day 1. Co-authored-by: name <38409260+Krishan-Nattar@users.noreply.github.com> Co-authored-by: another-name <43363916+markpkng@users.noreply.github.com>

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,80 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+/* Had trouble using hex values w/ styled components, here are rgba values:
+
+Green 4 (darkest)
+  rgb(42, 72, 78, 1)
+
+Green 3
+  rgb(55, 115, 117, 1)
+
+Green 2
+  rgba(168, 216, 205, 1)
+
+Green 1 (lightest)
+  rgba(221, 239, 227, 1)
+
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+  font-size: 100%;
+  font-family: 'Open Sans', sans-serif; 
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: white;
+  font-family: 'DM Serif Text', serif;
+}
+
+p {
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.4;
+  
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 .App {
   text-align: center;
 }
@@ -6,17 +83,7 @@
   height: 40vmin;
 }
 
-/* .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
-
 .App-link {
   color: #09d3ac;
 }
+
