--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ Green 1 (lightest)
 
 */
 
-html, body, div, span, applet, object, iframe,
+/* html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -39,7 +39,7 @@ time, mark, audio, video {
   font-family: 'Open Sans', sans-serif; 
 	font: inherit;
   vertical-align: baseline;
-}
+} */
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
