--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,10 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 /* Had trouble using hex values w/ styled components, here are rgba values:
 
 Green 4 (darkest)
-  rgb(42, 72, 78, 1)
+  rgba(42, 72, 78, 1)
 
 Green 3
-  rgb(55, 115, 117, 1)
+  rgba(55, 115, 117, 1)
 
 Green 2
   rgba(168, 216, 205, 1)
@@ -19,27 +14,6 @@ Green 1 (lightest)
 
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-  font-size: 100%;
-  font-family: 'Open Sans', sans-serif; 
-	font: inherit;
-	vertical-align: baseline;
-}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -47,17 +21,15 @@ footer, header, hgroup, menu, nav, section {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: white;
   font-family: 'DM Serif Text', serif;
+  color:white;
 }
 
 p {
   font-family: 'Open Sans', sans-serif;
-  line-height: 1.4;
-  
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
 ol, ul {
 	list-style: none;
@@ -87,3 +59,29 @@ table {
   color: #09d3ac;
 }
 
+#login-modal h5.modal-title {
+  color: black;
+}
+
+.success-container {
+  width: 80%;
+    margin: 0 auto;
+    color: white;
+}
+
+
+.fade-appear{
+  opacity:0;
+  z-index:1;
+  transition: 1000ms ease-out;
+}
+
+.fade-appear-active{
+  opacity:1;
+  transition: 1000ms ease-out;
+}
+
+.fade-appear.fade-appear-active{
+  opacity:1;
+  transition: 1000ms ease-out;
+}
