--- a/src/App.css
+++ b/src/App.css
@@ -81,3 +81,20 @@ table {
     margin-left: 0;
   }
 }
+
+.side-drawer{
+  height:100%;
+  position:fixed;
+  background: white;
+  top:0;
+  left:0;
+  width: 70%;
+  max-width:400px;
+  z-index:200;
+  box-shadow: 1px 0px 7px rgba(0,0,0,0.5);
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-out;
+}
+.side-drawer.open{
+  transform:translateX(0);
+}
